--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -29,7 +29,7 @@ a {
   color: $color-link;
   margin: -.2rem;
   padding: .2rem;
-  text-decoration: none;
+  text-decoration: underline;
 
   &:visited { color: $color-link-visited; }
   &:hover { color: $color-link-hover; text-decoration: underline; }
