--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -82,7 +82,7 @@ a {
   color: #bb5400;
   margin: -.2rem;
   padding: .2rem;
-  text-decoration: none; }
+  text-decoration: underline; }
   a:visited {
     color: #bb5400; }
   a:hover {
@@ -186,10 +186,13 @@ h3 {
   height: 1px;
   display: block;
   border-top: 1px rgba(100, 84, 48, 0.1) solid; }
+.home ol, .home ul {
+  margin-bottom: 2em;
+  margin-left: 2rem; }
 
 .home-intro {
   margin-top: 1em;
-  font-size: 1.8rem; }
+  font-size: 2rem; }
 
 .home-closing {
   margin-top: 4em;
