--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -65,7 +65,7 @@ h3 {
 }
 
 .content {
-  padding: 6rem 0.8rem;
+  padding: 10vh 0.8rem;
 
   h1 {
     margin-bottom: 2.5rem;
@@ -96,7 +96,7 @@ h3 {
     border-radius: 2rem;
   }
   .content {
-    padding: 10rem 2rem;
+    padding: 30vh 2rem;
     max-width: 36rem;
     margin: 0 auto;
     ul {
