Add beliefs to home page. Adjust copy

--- a/_assets/sass/globals/_mixins.scss
+++ b/_assets/sass/globals/_mixins.scss
@@ -17,6 +17,7 @@ $color-link: #bb5400;
 $color-link-hover: #bb5400;
 $color-link-visited: #bb5400;
 $color-text: #645430;
+$color-highlight: #FDEA98;
 $color-lines: rgba(100, 84, 48, 0.1);
 $color-spot: #FF548F;
 
