Increase the font size, optimize intro for two lines on mobile

--- a/_assets/sass/globals/_mixins.scss
+++ b/_assets/sass/globals/_mixins.scss
@@ -22,6 +22,13 @@ $color-lines: rgba(100, 84, 48, 0.1);
 $color-spot: #FF548F;
 
 
+// Global classes ———————————————————————————— •
+// ——————————————————————————————————————————— •
+
+.nowrap {
+  white-space: nowrap;
+}
+
 // Effects ——————————————————————————————————— •
 // ——————————————————————————————————————————— •
 
