--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -21,7 +21,7 @@ body {
   color: $color-text;
   font-family: $font-body;
   font-size: 1.2rem;
-  line-height: 1.8rem;
+  line-height: 1.5em;
   position: relative;
 }
 
@@ -90,14 +90,15 @@ h3 {
 @include responsive-break-point(640px) {
   body {
     margin: 3rem;
-    border: 1px $color-lines solid;
+    font-size: 1.6rem;
+    border: 0.2rem $color-lines solid;
     -webkit-border-radius: 2rem;
     -moz-border-radius: 2rem;
     border-radius: 2rem;
   }
   .content {
-    padding: 30vh 2rem;
-    max-width: 36rem;
+    padding: 20vh 2rem;
+    max-width: 50rem;
     margin: 0 auto;
     ul {
       padding-left: 0;
