Add style sheet for objectives-course

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -233,6 +233,11 @@ h3 {
     margin-left: -0.5em; }
   .home ul {
     margin-left: 2rem; } }
+.objectives-course h1 {
+  text-align: center; }
+.objectives-course ul {
+  margin-left: 1em; }
+
 .update ol {
   margin-bottom: 1em; }
 
