--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -2,10 +2,27 @@
 
   h1 {
     text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.4em;
+  }
+
+  h2 {
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 2em 0;
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 1em;
+    margin: 1em 0 0.5em;
   }
 
   ul {
     margin-left: 1em;
+    font-style: italic;
   }
 
 }
