--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -234,9 +234,22 @@ h3 {
   .home ul {
     margin-left: 2rem; } }
 .objectives-course h1 {
-  text-align: center; }
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.4em; }
+.objectives-course h2 {
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 2em 0; }
+.objectives-course h3 {
+  font-weight: bold;
+  font-size: 1em;
+  margin: 1em 0 0.5em; }
 .objectives-course ul {
-  margin-left: 1em; }
+  margin-left: 1em;
+  font-style: italic; }
 
 .update ol {
   margin-bottom: 1em; }
