--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -5,6 +5,7 @@
     font-weight: bold;
     text-transform: uppercase;
     font-size: 1.4em;
+    line-height: 1.1;
   }
 
   h2 {
@@ -12,17 +13,28 @@
     font-weight: bold;
     text-transform: uppercase;
     margin: 2em 0;
+    line-height: 1.1;
+  }
+
+  #mc_embed_signup {
+    &, & .button, & input.email, & #mc-embedded-subscribe-form div.mce_inline_error {
+      font: inherit;
+    }
   }
 
   h3 {
     font-weight: bold;
     font-size: 1em;
+    line-height: 1.1;
     margin: 1em 0 0.5em;
   }
 
   ul {
-    margin-left: 1em;
+    margin-left: 0em;
     font-style: italic;
+    @include responsive-break-point(640px) {
+      margin-left: 1em;
+    }
   }
 
 }
