Tweak signup form styling

--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -20,6 +20,9 @@
     &, & .button, & input.email, & #mc-embedded-subscribe-form div.mce_inline_error {
       font: inherit;
     }
+    .button {
+      height: auto;
+    }
   }
 
   h3 {
