--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -1,5 +1,10 @@
 .objectives-course {
 
+  .content {
+    font-size: 0.9em;
+    line-height: 1.25;
+  }
+
   h1 {
     text-align: center;
     font-weight: bold;
@@ -38,6 +43,21 @@
     @include responsive-break-point(640px) {
       margin-left: 1em;
     }
+  }
+
+  .intro {
+    padding: 1em;
+    background: transparentize($color-highlight, 0.7);
+    border-radius: 0.3em;
+    margin: 1em 0 2em;
+  }
+
+  hr {
+    max-width: 10rem;
+    margin: 2em auto 1em;
+    background-color: $color-lines;
+    border: none;
+    height: 0.2rem;
   }
 
 }
