--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -60,4 +60,34 @@
     height: 0.2rem;
   }
 
+  .have-done-lists-heading {
+    text-transform: none;
+    font-weight: normal;
+    font-style: italic;
+  }
+
+  .have-done-list {
+    font-size: 0.8em;
+    line-height: 1.2em;
+    background: lighten($color-lines, 5%);
+    padding: 1em;
+    margin: 1em;
+
+    h3 {
+      font-weight: 700;
+      margin: 0;
+    }
+    ul {
+      list-style: none;
+      margin-left: 1em;
+      font-style: normal;
+      color: lighten($color-text, 10%);
+      margin-top: 0.5em;
+      margin-bottom: 0;
+    }
+    li {
+      margin-bottom: 0.5em;
+    }
+  }
+
 }
