--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -3,6 +3,10 @@
   .content {
     font-size: 0.9em;
     line-height: 1.25;
+    ul {
+      padding-left: 0;
+      margin-left: 1em;
+    }
   }
 
   h1 {
@@ -88,6 +92,30 @@
     li {
       margin-bottom: 0.5em;
     }
+  }
+
+  ul.instead-of-list {
+    list-style: none;
+    margin-left: 5rem;
+    @include responsive-break-point(640px) {
+      margin-left: 7em;
+    }
+    position: relative;
+    font-style: normal;
+
+    font-size: 0.9em;
+    line-height: 1.1em;
+    li {
+      margin-bottom: 0.5em;
+    }
+  }
+  .instead-of-prefix {
+    position: absolute;
+    display: inline-block;
+    white-space: nowrap;
+    right: 100%;
+    margin-right: 0.5em;
+    text-align: right;
   }
 
 }
