--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -96,14 +96,15 @@
 
   ul.instead-of-list {
     list-style: none;
-    margin-left: 5rem;
+    margin-left: 1rem;
+    margin-top: 2.5em;
     @include responsive-break-point(640px) {
+      margin-top: 0;
       margin-left: 7em;
     }
     position: relative;
     font-style: normal;
 
-    font-size: 0.9em;
     line-height: 1.1em;
     li {
       margin-bottom: 0.5em;
@@ -113,9 +114,17 @@
     position: absolute;
     display: inline-block;
     white-space: nowrap;
-    right: 100%;
-    margin-right: 0.5em;
-    text-align: right;
+    bottom: 100%;
+    margin-top: -1.5em;
+    margin-left: -1em;
+    @include responsive-break-point(640px) {
+      bottom: auto;
+      right: 100%;
+      margin-right: 0.5em;
+      margin-left: 0;
+      margin-top: 0;
+      text-align: right;
+    }
   }
 
 }
