--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -94,6 +94,22 @@
     }
   }
 
+  @include responsive-break-point(640px) {
+    .have-done-lists {
+      display: flex;
+      flex-direction: row;
+      align-items: stretch;
+      align-content: flex-start;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    .have-done-list {
+      flex-grow: 0;
+      flex-shrink: 0;
+      flex-basis: 35%;
+    }
+  }
+
   ul.instead-of-list {
     list-style: none;
     margin-left: 1rem;
