--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -299,6 +299,18 @@ h3 {
     margin-bottom: 0; }
   .objectives-course .have-done-list li {
     margin-bottom: 0.5em; }
+@media only screen and (min-width: 640px) {
+  .objectives-course .have-done-lists {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    align-content: flex-start;
+    justify-content: center;
+    flex-wrap: wrap; }
+  .objectives-course .have-done-list {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 35%; } }
 .objectives-course ul.instead-of-list {
   list-style: none;
   margin-left: 1rem;
