--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -139,5 +139,10 @@
       text-align: right;
     }
   }
+  ul.from-to-list {
+    list-style: none;
+    margin: 0 auto;
+    text-align: center;
+  }
 
 }
