--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -335,6 +335,10 @@ h3 {
     margin-left: 0;
     margin-top: 0;
     text-align: right; } }
+.objectives-course ul.from-to-list {
+  list-style: none;
+  margin: 0 auto;
+  text-align: center; }
 
 .update ol {
   margin-bottom: 1em; }
