Objectives Course: Add switch-away-from paragraph

--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -49,6 +49,13 @@
     }
   }
 
+  .switch-away-from {
+    font-size: 1.2em;
+    @include responsive-break-point(640px) {
+      margin: 0 3em 3em;
+    }
+  }
+
   .intro {
     padding: 1em;
     background: transparentize($color-highlight, 0.7);
