--- a/_includes/og.html
+++ b/_includes/og.html
@@ -8,7 +8,7 @@
   {% if page.og.images %}
     {% for image in page.og.images %}
       {% if image.url %}
-        <meta property="og:image" content="{{ image.url }}" />
+        <meta property="og:image" content="{{ site.url }}{{ image.url }}" />
       {% endif %}
       {% if image.width %}
         <meta property="og:image:width" content="{{ image.width }}" />
