Revise the course copy for announcing the first cohort

--- a/_includes/signup-objectives-course-cohort.html
+++ b/_includes/signup-objectives-course-cohort.html
@@ -1,2 +1,4 @@
+<div id="signup">
 <script src="https://createform.com/the-objectives-course/embed" type="text/javascript"></script>
 <div class="createform" id="the-objectives-course"></div>
+</div>
