--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -239,6 +239,17 @@ h3 {
   .objectives-course .content ul {
     padding-left: 0;
     margin-left: 1em; }
+.objectives-course .img-responsive {
+  width: 100%;
+  height: auto;
+  display: block; }
+.objectives-course .img-responsive-full {
+  display: none; }
+@media only screen and (min-width: 420px) {
+  .objectives-course .img-responsive-mobile {
+    display: none; }
+  .objectives-course .img-responsive-full {
+    display: block; } }
 .objectives-course h1 {
   text-align: center;
   font-weight: bold;
