--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -288,11 +288,38 @@ h3 {
   @media only screen and (min-width: 640px) {
     .objectives-course .switch-away-from {
       margin: 0 3em 3em; } }
-.objectives-course .intro, .objectives-course #mc_embed_signup {
+.objectives-course .intro, .objectives-course #mc_embed_signup, .objectives-course .createform {
   padding: 1em;
   background: rgba(253, 234, 152, 0.3);
   border-radius: 0.3em;
-  margin: 1em 0 2em; }
+  margin: 1em 0 2em;
+  box-sizing: border-box; }
+.objectives-course ul.get-started-checklist {
+  font-weight: bold;
+  width: 80%;
+  margin: 0 auto;
+  list-style: none;
+  font-style: normal; }
+  .objectives-course ul.get-started-checklist li {
+    margin: 0.5em 0;
+    margin-left: 2em;
+    display: inline-block;
+    position: relative; }
+    .objectives-course ul.get-started-checklist li:after {
+      /*Add another block-level blank space*/
+      content: '';
+      display: block;
+      position: absolute;
+      left: -2em;
+      top: -0.3em;
+      /*Make it a small rectangle so the border will create an L-shape*/
+      width: 0.5em;
+      height: 1.2em;
+      /*Add a white border on the bottom and left, creating that 'L' */
+      border: solid #bb5400;
+      border-width: 0 0.3em 0.3em 0;
+      /*Rotate the L 45 degrees to turn it into a checkmark*/
+      transform: rotate(45deg); }
 .objectives-course .sign-up-link {
   display: inline-block;
   padding: 0.5em 2em;
