--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -277,6 +277,11 @@ h3 {
   font-size: 1em;
   line-height: 1.1;
   margin: 1em 0 0.5em; }
+  .objectives-course h3.get-started-heading {
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 2em 0 1em; }
 .objectives-course ul {
   margin-left: 0em;
   font-style: italic; }
@@ -295,7 +300,6 @@ h3 {
   margin: 1em 0 2em;
   box-sizing: border-box; }
 .objectives-course ul.get-started-checklist {
-  font-weight: bold;
   width: 80%;
   margin: 0 auto;
   list-style: none;
@@ -328,6 +332,16 @@ h3 {
 .objectives-course .sign-up-link-wrapper {
   text-align: center;
   margin: 1em 0; }
+.objectives-course .createform .cf-input {
+  padding: 0.5em .7em; }
+.objectives-course .createform .cf-label {
+  margin-bottom: 0;
+  margin-top: 0; }
+.objectives-course .createform .submit-btn {
+  font-size: 1em;
+  background-color: #bb5400; }
+.objectives-course .createform .cf-submit {
+  margin-top: 0; }
 .objectives-course hr {
   max-width: 10rem;
   margin: 2em auto 1em;
