--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -309,19 +309,32 @@ h3 {
     margin-left: 2em;
     display: inline-block;
     position: relative; }
+    .objectives-course ul.get-started-checklist li:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 1.5em;
+      height: 1.5em;
+      -webkit-border-radius: 0.75em;
+      -moz-border-radius: 0.75em;
+      -o-border-radius: 0.75em;
+      border-radius: 0.75em;
+      left: -2em;
+      top: -0.2em;
+      background: #f7f4ee; }
     .objectives-course ul.get-started-checklist li:after {
       /*Add another block-level blank space*/
       content: '';
       display: block;
       position: absolute;
-      left: -2em;
-      top: -0.3em;
+      left: -1.5em;
+      top: 0em;
       /*Make it a small rectangle so the border will create an L-shape*/
-      width: 0.5em;
-      height: 1.2em;
+      width: 0.3em;
+      height: 0.7em;
       /*Add a white border on the bottom and left, creating that 'L' */
-      border: solid #bb5400;
-      border-width: 0 0.3em 0.3em 0;
+      border: solid #000;
+      border-width: 0 0.2em 0.2em 0;
       /*Rotate the L 45 degrees to turn it into a checkmark*/
       transform: rotate(45deg); }
 .objectives-course .sign-up-link {
