--- a/_assets/sass/pages/_objectives-course.scss
+++ b/_assets/sass/pages/_objectives-course.scss
@@ -9,6 +9,25 @@
     }
   }
 
+  .img-responsive {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  .img-responsive-full {
+    display: none;
+  }
+  @include responsive-break-point(420px) {
+    .img-responsive-mobile {
+      display: none;
+    }
+    .img-responsive-full {
+      display: block;
+    }
+  }
+
+
+
   h1 {
     text-align: center;
     font-weight: bold;
@@ -47,6 +66,12 @@
     font-size: 1em;
     line-height: 1.1;
     margin: 1em 0 0.5em;
+    &.get-started-heading {
+      font-weight: normal;
+      text-align: center;
+      text-transform: uppercase;
+      margin: 2em 0 1em;
+    }
   }
 
   ul {
@@ -64,11 +89,56 @@
     }
   }
 
-  .intro, #mc_embed_signup {
+  .intro, #mc_embed_signup, .createform {
     padding: 1em;
     background: transparentize($color-highlight, 0.7);
     border-radius: 0.3em;
     margin: 1em 0 2em;
+    box-sizing: border-box;
+  }
+
+  ul.get-started-checklist {
+    width: 80%;
+    margin: 0 auto;
+    list-style: none;
+    font-style: normal;
+    li {
+      margin: 0.5em 0;
+      margin-left: 2em;
+      display:inline-block;
+      position: relative;
+
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 1.5em;
+        height: 1.5em;
+        @include border-radius(0.75em);
+        left: -2em;
+        top: -0.2em;
+        background: #f7f4ee;
+      }
+      &:after{
+        /*Add another block-level blank space*/
+        content: '';
+        display: block;
+        position: absolute;
+        left: -1.5em;
+        top: 0em;
+
+        /*Make it a small rectangle so the border will create an L-shape*/
+        width: 0.3em;
+        height: 0.7em;
+
+        /*Add a white border on the bottom and left, creating that 'L' */
+        border: solid #000;
+        border-width: 0 0.2em 0.2em 0;
+
+        /*Rotate the L 45 degrees to turn it into a checkmark*/
+        transform: rotate(45deg);
+      }
+    }
   }
 
   .sign-up-link {
@@ -81,6 +151,26 @@
   .sign-up-link-wrapper {
     text-align: center;
     margin: 1em 0;
+  }
+
+  .createform {
+    .cf-input {
+      padding: 0.5em .7em;
+    }
+
+    .cf-label {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
+    .submit-btn {
+      font-size: 1em;
+      background-color: $color-link;
+    }
+
+    .cf-submit {
+      margin-top: 0;
+    }
   }
 
   hr {
