--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -239,6 +239,17 @@ h3 {
   .objectives-course .content ul {
     padding-left: 0;
     margin-left: 1em; }
+.objectives-course .img-responsive {
+  width: 100%;
+  height: auto;
+  display: block; }
+.objectives-course .img-responsive-full {
+  display: none; }
+@media only screen and (min-width: 420px) {
+  .objectives-course .img-responsive-mobile {
+    display: none; }
+  .objectives-course .img-responsive-full {
+    display: block; } }
 .objectives-course h1 {
   text-align: center;
   font-weight: bold;
@@ -266,6 +277,11 @@ h3 {
   font-size: 1em;
   line-height: 1.1;
   margin: 1em 0 0.5em; }
+  .objectives-course h3.get-started-heading {
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 2em 0 1em; }
 .objectives-course ul {
   margin-left: 0em;
   font-style: italic; }
@@ -277,11 +293,50 @@ h3 {
   @media only screen and (min-width: 640px) {
     .objectives-course .switch-away-from {
       margin: 0 3em 3em; } }
-.objectives-course .intro, .objectives-course #mc_embed_signup {
+.objectives-course .intro, .objectives-course #mc_embed_signup, .objectives-course .createform {
   padding: 1em;
   background: rgba(253, 234, 152, 0.3);
   border-radius: 0.3em;
-  margin: 1em 0 2em; }
+  margin: 1em 0 2em;
+  box-sizing: border-box; }
+.objectives-course ul.get-started-checklist {
+  width: 80%;
+  margin: 0 auto;
+  list-style: none;
+  font-style: normal; }
+  .objectives-course ul.get-started-checklist li {
+    margin: 0.5em 0;
+    margin-left: 2em;
+    display: inline-block;
+    position: relative; }
+    .objectives-course ul.get-started-checklist li:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 1.5em;
+      height: 1.5em;
+      -webkit-border-radius: 0.75em;
+      -moz-border-radius: 0.75em;
+      -o-border-radius: 0.75em;
+      border-radius: 0.75em;
+      left: -2em;
+      top: -0.2em;
+      background: #f7f4ee; }
+    .objectives-course ul.get-started-checklist li:after {
+      /*Add another block-level blank space*/
+      content: '';
+      display: block;
+      position: absolute;
+      left: -1.5em;
+      top: 0em;
+      /*Make it a small rectangle so the border will create an L-shape*/
+      width: 0.3em;
+      height: 0.7em;
+      /*Add a white border on the bottom and left, creating that 'L' */
+      border: solid #000;
+      border-width: 0 0.2em 0.2em 0;
+      /*Rotate the L 45 degrees to turn it into a checkmark*/
+      transform: rotate(45deg); }
 .objectives-course .sign-up-link {
   display: inline-block;
   padding: 0.5em 2em;
@@ -290,6 +345,16 @@ h3 {
 .objectives-course .sign-up-link-wrapper {
   text-align: center;
   margin: 1em 0; }
+.objectives-course .createform .cf-input {
+  padding: 0.5em .7em; }
+.objectives-course .createform .cf-label {
+  margin-bottom: 0;
+  margin-top: 0; }
+.objectives-course .createform .submit-btn {
+  font-size: 1em;
+  background-color: #bb5400; }
+.objectives-course .createform .cf-submit {
+  margin-top: 0; }
 .objectives-course hr {
   max-width: 10rem;
   margin: 2em auto 1em;
