The Objectives Course: Close signups for Feb. 26 launch, tweak text

--- a/_includes/signup-objectives-course.html
+++ b/_includes/signup-objectives-course.html
@@ -9,7 +9,6 @@
 <div id="mc_embed_signup">
 <form action="//pascallaliberte.us11.list-manage.com/subscribe/post?u=3782ecad016861895a5f38695&amp;id=221b321765" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate style="padding: 0">
     <div id="mc_embed_signup_scroll">
-	<h2>Get notified when The Objectives Course launches</h2>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
@@ -21,6 +20,7 @@
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3782ecad016861895a5f38695_221b321765" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe to get notified" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
+	<p><em>You will only receive emails when upcoming launches of the course are announced.</em></p>
 </form>
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
