--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -196,6 +196,22 @@ h3 {
 .home ul {
   margin-bottom: 2em;
   margin-left: 1rem; }
+.home #mc_embed_signup {
+  padding: 1em;
+  background: rgba(253, 234, 152, 0.3);
+  border-radius: 0.3em;
+  margin: 1em 0 2em;
+  box-sizing: border-box; }
+  .home #mc_embed_signup, .home #mc_embed_signup .button, .home #mc_embed_signup input.email, .home #mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {
+    font: inherit; }
+  .home #mc_embed_signup .button {
+    height: auto; }
+  .home #mc_embed_signup div#mce-responses {
+    padding: 0;
+    margin: 0; }
+  .home #mc_embed_signup div.response {
+    margin: 0 0 1em;
+    padding: 0; }
 
 .home-intro {
   margin-top: 1em; }
