--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -46,6 +46,7 @@ a {
 
 h1, h2 {
   font-family: $font-headings;
+  font-weight: 900;
 }
 
 h1 {
@@ -65,7 +66,7 @@ h3 {
 }
 
 .content {
-  padding: 10vh 0.8rem;
+  padding: 5vh 0.8rem;
 
   h1 {
     margin-bottom: 2.5rem;
@@ -75,7 +76,7 @@ h3 {
     margin-bottom: 0.5rem;
   }
   p {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
 
   ul {
@@ -97,7 +98,7 @@ h3 {
     border-radius: 2rem;
   }
   .content {
-    padding: 20vh 2rem;
+    padding: 15vh 2rem;
     max-width: 50rem;
     margin: 0 auto;
     ul {
