--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -140,13 +140,17 @@ h3 {
     margin-bottom: 1rem; }
 
 @media only screen and (min-width: 640px) {
+  html {
+    background-color: rgba(204, 187, 148, 0.1); }
+
   body {
     margin: 3rem;
     font-size: 1.4rem;
     border: 0.2rem rgba(100, 84, 48, 0.1) solid;
     -webkit-border-radius: 2rem;
     -moz-border-radius: 2rem;
-    border-radius: 2rem; }
+    border-radius: 2rem;
+    background: white; }
 
   .content {
     padding: 15vh 2rem;
