Fix signup buttons

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -136,7 +136,8 @@ h3 {
 
 @import
   'components/navigation',
-  'components/footer';
+  'components/footer',
+  'components/signup-forms';
 
 
 // Pages ————————————————————————————————————— •
