--- a/_assets/sass/globals/_mixins.scss
+++ b/_assets/sass/globals/_mixins.scss
@@ -16,6 +16,7 @@ $color-background: #FFF;
 $color-link: #bb5400;
 $color-link-hover: #bb5400;
 $color-link-visited: #bb5400;
+$color-button: #db7c2c;
 $color-text: #645430;
 $color-highlight: #FDEA98;
 $color-lines: rgba(100, 84, 48, 0.1);
