--- a/_includes/signup-services-announcement.html
+++ b/_includes/signup-services-announcement.html
@@ -18,7 +18,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3782ecad016861895a5f38695_5d28355e77" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Yes, I'd like to know what services you'll offer" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Yes, I'd like to know what services you'll offer" name="subscribe" id="mc-embedded-subscribe" class="button signup-button"></div>
     </div>
 </form>
 </div>
