--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -139,6 +139,44 @@ h3 {
     padding-left: 1.6rem;
     margin-bottom: 1rem; }
 
+ul.get-started-checklist {
+  margin: 0 auto;
+  list-style: none;
+  font-style: normal; }
+  ul.get-started-checklist li {
+    margin: 0.5em 0;
+    margin-left: 2em;
+    display: inline-block;
+    position: relative; }
+    ul.get-started-checklist li:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 1.5em;
+      height: 1.5em;
+      -webkit-border-radius: 0.75em;
+      -moz-border-radius: 0.75em;
+      -o-border-radius: 0.75em;
+      border-radius: 0.75em;
+      left: -2em;
+      top: -0.2em;
+      background: #f7f4ee; }
+    ul.get-started-checklist li:after {
+      /*Add another block-level blank space*/
+      content: '';
+      display: block;
+      position: absolute;
+      left: -1.5em;
+      top: 0em;
+      /*Make it a small rectangle so the border will create an L-shape*/
+      width: 0.3em;
+      height: 0.7em;
+      /*Add a white border on the bottom and left, creating that 'L' */
+      border: solid #000;
+      border-width: 0 0.2em 0.2em 0;
+      /*Rotate the L 45 degrees to turn it into a checkmark*/
+      transform: rotate(45deg); }
+
 @media only screen and (min-width: 640px) {
   html {
     background-color: rgba(204, 187, 148, 0.1); }
@@ -356,43 +394,7 @@ body #mc_embed_signup {
   margin: 1em 0 2em;
   box-sizing: border-box; }
 .objectives-course ul.get-started-checklist {
-  width: 80%;
-  margin: 0 auto;
-  list-style: none;
-  font-style: normal; }
-  .objectives-course ul.get-started-checklist li {
-    margin: 0.5em 0;
-    margin-left: 2em;
-    display: inline-block;
-    position: relative; }
-    .objectives-course ul.get-started-checklist li:before {
-      content: '';
-      display: block;
-      position: absolute;
-      width: 1.5em;
-      height: 1.5em;
-      -webkit-border-radius: 0.75em;
-      -moz-border-radius: 0.75em;
-      -o-border-radius: 0.75em;
-      border-radius: 0.75em;
-      left: -2em;
-      top: -0.2em;
-      background: #f7f4ee; }
-    .objectives-course ul.get-started-checklist li:after {
-      /*Add another block-level blank space*/
-      content: '';
-      display: block;
-      position: absolute;
-      left: -1.5em;
-      top: 0em;
-      /*Make it a small rectangle so the border will create an L-shape*/
-      width: 0.3em;
-      height: 0.7em;
-      /*Add a white border on the bottom and left, creating that 'L' */
-      border: solid #000;
-      border-width: 0 0.2em 0.2em 0;
-      /*Rotate the L 45 degrees to turn it into a checkmark*/
-      transform: rotate(45deg); }
+  width: 80%; }
 .objectives-course .sign-up-link {
   display: inline-block;
   padding: 0.5em 2em;
