--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,3 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 <script type="text/javascript" src="/assets/javascript/scripts.js"></script>
