--- a/_assets/sass/components/_signup-forms.scss
+++ b/_assets/sass/components/_signup-forms.scss
@@ -8,6 +8,8 @@ body #mc_embed_signup {
     line-height: 1.2;
     padding: 0.3em 0.7em;
     background-color: $color-button;
+    -webkit-appearance: none;
+    border-radius: 4px;
     &:hover {
       background-color: darken($color-button, 10%);
     }
