Add netfloodmeter snippet

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,5 @@
     {% endif %}
     <script src="//use.typekit.net/qqj0cow.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+    <script async src="https://api.netfloodmeter.com/floodmeter.js?u=YNCNFPNY"></script>
   </head>
