--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -182,6 +182,7 @@ ul.get-started-checklist {
 @import
   'components/navigation',
   'components/footer',
+  'components/forms',
   'components/signup-forms';
 
 
